[TASK] Use java.util.Base64 instead of sun implementation in StringEncryption
contributed by Wdestroier